data/derived/fa15/progs/unify/prog0871.ml.out
Characters 59-78:
  | h::t -> h @ clone t (n - 1);;
            ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
